Added semantic tags

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 </head>
 <body id="body">
     <section class="contentwrapper"> <!--Main content section-->
-        <div class="top twelve">
+        <nav class="top twelve">
             <button class="nav" id="one" onclick="bone()">Ψ Inf.</button> <!--I thought it would be cool to add greek letters on them-->
             <button class="nav" id="two" onclick="btwo()">Δ Ind.</button>
             <button class="nav" id="three" onclick="bthree()">Ω Inn.</button>
             <button class="nav" id="four" onclick="bfour()">ξ Extra</button>
-        </div>
+        </nav>
         <div class="text five">
             <p id="par">This website's purpose is explaining the 9th sustainable development goal. Click the buttons above to learn more or click the icon to come back here.</p>
         </div>
-        <div class="other five">
+        <aside class="other five">
             <h1 id="tit" class="thinger">Welcome!</h1>
-        </div>
+        </aside>
         <div class="titler twelve" id="ffs"> <!--Thing, title, and paragraph are divided in different divs-->
             <img src="bgs/icon.png" alt="" height="150px" class="icon" id="ball">
             <h1 class="header">Build resilient infrastructure, promote inclusive and sustainable industrialization and foster innovation.</h1>
